fix(textarea): fixed error with vertical scrollbar and autosize

--- a/packages/textarea/src/index.module.css
+++ b/packages/textarea/src/index.module.css
@@ -62,6 +62,10 @@
     height: inherit;
 }
 
+.overflowHidden.overflowHidden {
+    overflow: hidden;
+}
+
 .customScrollbar {
     @mixin custom-scrollbar;
 }
